# Septentrionalem_Cerebrum

./: README.md
collected_data/: README.md  final3.json
communication/: Cargo.toml
communication/src/: lib.rs
graphing/: graphing_tool.py
ground_station/: Cargo.toml  all_the_data.json  data.json  data2.json  data3.json  final.json  final2.json
ground_station/src/: camera.rs  data.rs  environment.rs  main.rs  serial_data.rs  ui.rs
sat/: Cargo.toml
satellite/: .nvim.lua  Cargo.toml
satellite/src/: gps.rs  lsm6ds3.rs  main.rs  pressure_sensor.rs  scd41.rs  sd_card.rs
